Feat(#273) Fix phone number extension's mask.

--- a/src/pages/building-contact-detail/building-contact-detail.html
+++ b/src/pages/building-contact-detail/building-contact-detail.html
@@ -58,7 +58,7 @@
             <ion-item>
                 <ion-label fixed>{{'extension' | translate}}</ion-label>
                 <ion-input formControlName="phoneNumberExtension"
-                           [brmasker]="{mask:'(000) 000-0000', len:10, type:'num'}"
+                           [brmasker]="{mask:'0000000000', len:10, type:'num'}"
                            type="tel"></ion-input>
             </ion-item>
         </ion-item-group>
