--- a/src/pages/building-child-picture-edition/building-child-picture-edition.html
+++ b/src/pages/building-child-picture-edition/building-child-picture-edition.html
@@ -9,7 +9,7 @@
   <ion-content padding>
   
     <div ion-fixed class="div-sketch-tool">
-      <lib-mobile-sketch-tool [imageData]="pictureUri" [loadedJson]="sketchJson" (canvas)="onCanvasChange($event)">
+      <lib-mobile-sketch-tool [imageData]="pictureUri" [loadedJson]="sketchJson" [pictogramsPath]="pictogramsPath" [pictograms]="pictograms" (canvas)="onCanvasChange($event)">
       </lib-mobile-sketch-tool>
     </div>
   
