--- a/src/pages/inspection-list/inspection-list.html
+++ b/src/pages/inspection-list/inspection-list.html
@@ -13,6 +13,13 @@
 </ion-header>
 
 <ion-content>
+  <div *ngIf="isSynching">
+    <div style="text-align: center;">{{'checkCache' | translate}}</div>
+    <div>
+      <progress-bar [progress]="synchingPercentCompleted" color="#B32017">
+      </progress-bar>
+    </div>
+  </div>
   <ion-refresher (ionRefresh)="refreshList($event)">
     <ion-refresher-content></ion-refresher-content>
   </ion-refresher>
