--- a/src/pages/intervention-course-detail/intervention-course-detail.html
+++ b/src/pages/intervention-course-detail/intervention-course-detail.html
@@ -23,7 +23,7 @@
       <button item-end ion-button (click)="onChangeOrder()" color="caucaRed">{{changeCourseAction}}</button>
     </ion-item-divider>
     <ion-item-group [reorder]="changeOrder" (ionItemReorder)="onReorderLane($event)" side="start">
-      <button ion-item *ngFor="let lane of courseLanes | orderBy:'sequence'" (click)="onClickLane(lane.id)">{{lane.description}}</button>
+      <button ion-item *ngFor="let lane of lanes | orderBy:'sequence'" (click)="onClickLane(lane.id)">{{lane.idLane}}</button>
     </ion-item-group>
   </ion-list>
 
