--- a/src/pages/intervention-implantation-plan/intervention-implantation-plan.html
+++ b/src/pages/intervention-implantation-plan/intervention-implantation-plan.html
@@ -5,6 +5,6 @@
   </ion-navbar>
 </ion-header>
 
-<ion-content [formGroup]="form" ion-fixed>
-  <pictures [repo]="picRepo" [multiPictures]="false" height="80vh" [saveAuto]="false" formControlName="id">{{'loading' | translate}}</pictures>
+<ion-content ion-fixed>
+  <pictures [repo]="picRepo" [multiPictures]="false" height="80vh" [saveAuto]="false" [(ngModel)]="IdBuilding">{{'loading' | translate}}</pictures>
 </ion-content>
