--- a/src/pages/intervention-water-supplies/intervention-water-supplies.html
+++ b/src/pages/intervention-water-supplies/intervention-water-supplies.html
@@ -17,7 +17,7 @@
             <button class="action-list-button" (click)="onClickHydrant(hydrant.id)">
                 <ion-icon class="ion-md-trash"></ion-icon>
             </button>
-            <div class="fire-hydrant-info" (click)="goToFireHydrantDetail(hydrant.idFireHydrant)">
+            <div class="fire-hydrant-info">
                 <h2>{{hydrant.color}}{{hydrant.number}}</h2>
                 <p>{{hydrant.address | formatCoordinates}}</p>
             </div>
@@ -27,11 +27,11 @@
 
 <ion-footer class="page-footer">
     <ion-toolbar>
-        <ion-buttons>
-            <button ion-button icon-left (click)="onItemClick(plan?.idCity)">
+        <!--<ion-buttons>
+            <button ion-button icon-left>
                 <ion-icon name="add-circle"></ion-icon>
                 {{'addButton' | translate}}
             </button>
-        </ion-buttons>
+        </ion-buttons>-->
     </ion-toolbar>
 </ion-footer>
