--- a/src/pages/intervention-general/intervention-general.html
+++ b/src/pages/intervention-general/intervention-general.html
@@ -45,16 +45,16 @@
                 <ion-input type="text" disabled value="{{currentInspection?.laneName}}"></ion-input>
             </ion-item>
 
-          <ion-item *ngIf="currentInspection?.status !== inspectionRepo.inspectionVisitStatusEnum.Started">
+          <ion-item *ngIf="!canBeEdited">
             <ion-label fixed>{{'transversal' | translate}}</ion-label>
             <ion-input type="text" disabled value="{{currentInspection?.transversalLaneName}}"></ion-input>
           </ion-item>
 
-            <search-box *ngIf="currentInspection?.status == inspectionRepo.inspectionVisitStatusEnum.Started"
+            <search-box *ngIf="canBeEdited"
                     description="{{'transversal' | translate}}"
                     formControlName="idLaneTransversal"
                     [displayFieldName]="'name'"
-                    [disabledValue]="plan?.mainBuildingIdLane"
+                    [disabledValue]="controller.getMainBuilding()?.idLaneTransversal"
                     [keyFieldName]="'id'"
                     [dataService]="laneService"></search-box>
         </ion-list>
@@ -62,28 +62,32 @@
     <ion-card>
         <ion-card-header>{{statusText}}</ion-card-header>
         <div *ngIf="userAllowed">
-        <div class="refuse_reason" *ngIf="currentInspection?.approbationRefusalReason">
-            <ion-label>{{'reason' | translate}} :</ion-label>
-            <ion-label>{{currentInspection?.approbationRefusalReason}}</ion-label>
-        </div>
+            <div class="refuse_reason" *ngIf="currentInspection?.approbationRefusalReason">
+                <ion-label>{{'reason' | translate}} :</ion-label>
+                <ion-label>{{currentInspection?.approbationRefusalReason}}</ion-label>
+            </div>
 
-            <button *ngIf="startVisible" ion-button block color="caucaRed" class="large-button"
+            <button *ngIf="canStartInspection" ion-button block color="caucaRed" class="large-button"
                     (click)="startInspection()">{{'start' | translate}}
             </button>
 
-            <div class="inline-button">
+            <button *ngIf="canTransmitInspectionToServer" ion-button block color="caucaRed" class="large-button"
+                   (click)="uploadInspectionToServer()">{{'sendToServer' | translate}}
+            </button>
+
+            <div class="inline-button" *ngIf="canRefuseInspection">
                 <button ion-button color="caucaRed" (click)="refuseVisit()">{{'visitRefused' | translate}}</button>
                 <button ion-button color="caucaRed" (click)="absentVisit()">{{'absence' | translate}}</button>
             </div>
 
-            <button *ngIf="currentInspection?.status == inspectionRepo.inspectionVisitStatusEnum.Started" ion-button block
+            <button *ngIf="!canTransmitInspectionToServer && !canStartInspection" ion-button block
                     color="caucaRed" class="large-button" (click)="completeInspection()">{{'complete' | translate}}
             </button>
         </div>
         <div *ngIf="!userAllowed">
-        <div class="refuse_reason">
-            <ion-label>{{'otherUserInspection' | translate}}</ion-label>
-        </div>
+          <div class="refuse_reason">
+              <ion-label>{{'otherUserInspection' | translate}}</ion-label>
+          </div>
         </div>
     </ion-card>
 </ion-content>
