Feat(#280) Show app version

--- a/src/pages/home/home.html
+++ b/src/pages/home/home.html
@@ -11,6 +11,7 @@
                 <span ion-text>{{menuItem.title}}</span>
             </button>
         </ion-list>
+        <p id="version">{{'version' | translate}} : {{version}}</p>
     </ion-content>
 </ion-menu>
 
