--- a/src/pages/login/login.html
+++ b/src/pages/login/login.html
@@ -32,6 +32,7 @@
                 {{'login' | translate}}
             </button>
         </div>
+        <p id="version">{{'version' | translate}} : {{version}}</p>
     </div>
 
 </ion-content>
