--- a/src/pages/inspection-survey-summary/inspection-survey-summary.html
+++ b/src/pages/inspection-survey-summary/inspection-survey-summary.html
@@ -10,10 +10,10 @@
                 {{category.title | uppercase}}
             </ion-list-header>
             <div *ngFor="let answer of category.answerSummary; let index = index">
-                <div *ngIf="answer.questionType === questionTypeEnum.groupedQuestion && answer.childSurveyAnswerList != null &&  answer.childSurveyAnswerList.length > 0">
+                <div *ngIf="answer.questionType === questionTypeEnum.groupedQuestion && answer.recursiveAnswer != null &&  answer.recursiveAnswer.length > 0">
                     <ion-item-divider>{{answer.questionTitle}} #{{index + 1}}</ion-item-divider>
                     <ion-list>
-                        <ion-item class="recursive-item" *ngFor="let answerChild of answer.childSurveyAnswerList">
+                        <ion-item class="recursive-item" *ngFor="let answerChild of answer.recursiveAnswer">
                             <span>{{answerChild.questionDescription}}</span>
                             <p>{{answerChild.answer}}</p>
                         </ion-item>
