Fix(#306) Fix a few bugs and remove console.log and comments.

--- a/src/pages/inspection-list/inspection-list.html
+++ b/src/pages/inspection-list/inspection-list.html
@@ -43,13 +43,13 @@
       <ion-item-group *ngFor="let batch of filteredBatches">
         <ion-item-divider>{{'inspectionBatch' | translate}} : {{batch.description}}</ion-item-divider>
 
-        <button ion-item (click)="openInspection(inspection.id)" *ngFor="let inspection of batch.inspections">
+        <button ion-item (click)="openInspection(inspection.id)" *ngFor="let inspection of batch.inspections" [style.background-color]="inspection.status == -1 ? 'lightgrey' : ''" >
           <ion-avatar item-left style="font-size: 40px"><ion-icon name="home" [style.color]="getRiskColor(inspection.idRiskLevel)"></ion-icon></ion-avatar>
           <h2>{{inspection.civicNumber}}{{inspection.civicLetter}}, {{inspection.laneName}}</h2>
           <p>{{'riskLevel' | translate}} : {{getRiskDescription(inspection.idRiskLevel)}}</p>
           <p ion-text>{{getStatusDescription(inspection.status)}}</p>
 
-          <ion-icon name="cloud-done" item-end style="font-size: xx-large;" *ngIf="inspection.hasBeenDownloaded"></ion-icon>
+          <ion-icon [name]="inspection.status == -1 ? 'cloud-done' : 'cloud'" item-end style="font-size: xx-large;" *ngIf="inspection.hasBeenDownloaded"></ion-icon>
           <ion-icon name="cloud-download" *ngIf="!inspection.hasBeenDownloaded" item-end (click)="downloadInspection($event, inspection)" ></ion-icon>
 
         </button>
