--- a/src/pages/inspection-list/inspection-list.html
+++ b/src/pages/inspection-list/inspection-list.html
@@ -41,7 +41,13 @@
 
   <ion-list class="list-items">
       <ion-item-group *ngFor="let batch of filteredBatches">
-        <ion-item-divider>{{'inspectionBatch' | translate}} : {{batch.description}}</ion-item-divider>
+        <ion-item-divider>
+          {{'inspectionBatch' | translate}} : {{batch.description}}
+          <button ion-button item-end (click)="downloadBatch($event, batch)" icon-only clear style="font-size: large; color: black">
+            <ion-icon [name]="batch.hasBeenFullyDownloaded ? 'cloud' : 'cloud-download'" item-end></ion-icon>
+          </button>
+
+        </ion-item-divider>
 
         <button ion-item (click)="openInspection(inspection.id)" *ngFor="let inspection of batch.inspections" [style.background-color]="inspection.status == -1 ? 'lightgrey' : ''" >
           <ion-avatar item-left style="font-size: 40px"><ion-icon name="home" [style.color]="getRiskColor(inspection.idRiskLevel)"></ion-icon></ion-avatar>
@@ -50,7 +56,7 @@
           <p ion-text>{{getStatusDescription(inspection.status)}}</p>
 
           <ion-icon [name]="inspection.status == -1 ? 'cloud-done' : 'cloud'" item-end style="font-size: xx-large;" *ngIf="inspection.hasBeenDownloaded"></ion-icon>
-          <ion-icon name="cloud-download" *ngIf="!inspection.hasBeenDownloaded" item-end (click)="downloadInspection($event, inspection)" ></ion-icon>
+          <ion-icon name="cloud-download" *ngIf="!inspection.hasBeenDownloaded" item-end (click)="downloadInspection($event, inspection, batch)" ></ion-icon>
 
         </button>
 
