--- a/src/pages/intervention-buildings/intervention-buildings.html
+++ b/src/pages/intervention-buildings/intervention-buildings.html
@@ -13,9 +13,10 @@
     <ion-list-header>
       {{currentInspection?.civicNumber}}{{currentInspection?.civicLetter}}, {{currentInspection?.laneName}}
     </ion-list-header>
-    <button ion-item *ngFor="let building of controller.inspection.buildings" (click)="onClickBuilding(building.idBuilding, building.aliasName)" detail-push>
-      <h2>{{building.aliasName}}</h2>
-      <ion-icon name="home" item-start></ion-icon>
+    <button ion-item *ngFor="let building of controller.inspection.buildings; let i = index" (click)="onClickBuilding(building.idBuilding, building.aliasName)" detail-push>
+      <h2>{{getBuildingName(building, i)}}</h2>
+      <h3>{{getBuildingDescription(building, i)}}</h3>
+      <ion-icon name="home" item-start  [style.color]="!building.isMainBuilding ? 'grey' : ''"></ion-icon>
     </button>
   </ion-list>
 </ion-content>
