feat(#318) : rename place holder on alias

--- a/src/pages/building-details/building-details.html
+++ b/src/pages/building-details/building-details.html
@@ -15,7 +15,7 @@
       <ion-item-divider>{{'building' | translate}}</ion-item-divider>
       <ion-item>
         <ion-label>Alias</ion-label>
-        <ion-input placeholder="alias..." type="text" maxlength="50" formControlName="aliasName"></ion-input>
+        <ion-input placeholder="alias" type="text" maxlength="50" formControlName="aliasName"></ion-input>
       </ion-item>
       <ion-item>
         <ion-label>{{'corporateName' | translate }}</ion-label>
