Fix(#322) Change available fire hydrant page title.

--- a/src/pages/city-fire-hydrant/city-fire-hydrant.html
+++ b/src/pages/city-fire-hydrant/city-fire-hydrant.html
@@ -1,6 +1,6 @@
 <ion-header class="page-header">
   <ion-navbar>
-    <ion-title>{{'fireHydrantList' | translate}}</ion-title>
+    <ion-title>{{'availableFireHydrantList' | translate}}</ion-title>
   </ion-navbar>
   <ion-searchbar (ionInput)="getItems($event)" [placeholder]="'navigationSearch' | translate"></ion-searchbar>
 </ion-header>
