--- a/src/pages/home/home.html
+++ b/src/pages/home/home.html
@@ -1,17 +1,21 @@
-<ion-menu [content]="myhomecontent" id="inspectionListMenu">
-    <ion-header>
-        <menu-profile></menu-profile>
-    </ion-header>
+<ion-split-pane when="md">
 
-    <ion-content color="caucaRed">
-        <ion-list class="menu-items">
-            <button ion-item menuClose class="text-menu" *ngFor="let menuItem of menuItems"
-                    (click)="openPage(menuItem.page)">
-                <ion-icon item-left [name]="menuItem.icon"></ion-icon>
-                <span ion-text>{{menuItem.title}}</span>
-            </button>
-        </ion-list>
-    </ion-content>
-</ion-menu>
+  <ion-menu [content]="myhomecontent" id="inspectionListMenu">
+      <ion-header>
+          <menu-profile></menu-profile>
+      </ion-header>
 
-<ion-nav #myhomecontent [root]="rootPage"></ion-nav>
+      <ion-content color="caucaRed">
+          <ion-list class="menu-items">
+              <button ion-item menuClose class="text-menu" *ngFor="let menuItem of menuItems"
+                      (click)="openPage(menuItem.page)">
+                  <ion-icon item-left [name]="menuItem.icon"></ion-icon>
+                  <span ion-text>{{menuItem.title}}</span>
+              </button>
+          </ion-list>
+      </ion-content>
+  </ion-menu>
+
+<ion-nav #myhomecontent [root]="rootPage" main></ion-nav>
+
+</ion-split-pane>
